Fix birthday interaction and add homepage typewriter

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
   <main id="content" class="container">
     <section id="hero" class="hero">
-      <h1 class="hero__title">With all my heart</h1>
-      <p class="hero__lead">A little surprise — soft, romantic, and made just for you. Smooth transitions and a cozy birthday moment await.</p>
+      <h1 class="hero__title">Hey, Miss. Sharma</h1>
+      <div class="typewriter-line"> <span id="typewriter" aria-live="polite"></span><span class="caret">|</span></div>
+      <p class="hero__lead">A little effort just for you.</p>
       <p><a href="birthday.html" class="btn btn--primary">Open the Birthday Surprise</a></p>
     </section>
 
     <section id="about" class="panel">
       <h2>Why this</h2>
-      <p>This tiny site is a heartfelt, lovey-dovey page made to celebrate you. It’s responsive, warm, and crafted to feel intimate on every screen.</p>
+      <p>This tiny site is a heartfelt page made to celebrate you. It’s responsive, warm, and crafted to feel intimate on every screen.</p>
     </section>
 
     <section id="gallery" class="panel">
