--- a/index.html
+++ b/index.html
@@ -1,49 +1,25 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>For You — A Little Celebration</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Celebrate Sonam</title>
   <link rel="stylesheet" href="assets/styles.css">
 </head>
-<body class="page page--home">
-  <nav class="nav">
-    <a href="index.html" class="nav__brand">For You</a>
-    <ul class="nav__links">
-      <li><a href="index.html#hero">Home</a></li>
-      <li><a href="index.html#about">About</a></li>
-      <li><a href="index.html#gallery">Moments</a></li>
-      <li><a href="birthday.html" class="cta">Birthday</a></li>
-    </ul>
-  </nav>
+<body>
+  <main class="home">
+    <h1>Happy Birthday, Sonam!</h1>
+    <p id="home-message">Welcome — let's make this birthday unforgettable. Click the cake to begin the celebration!</p>
 
-  <main id="content" class="container">
-    <section id="hero" class="hero">
-      <h1 class="hero__title">Hey, Miss. Sharma</h1>
-      <div class="typewriter-line"> <span id="typewriter" aria-live="polite"></span><span class="caret">|</span></div>
-      <p class="hero__lead">A little effort just for you.</p>
-      <p><a href="birthday.html" class="btn btn--primary">Open the Birthday Surprise</a></p>
-    </section>
+    <div class="typewriter">
+      <span id="typewriter"></span>
+      <span class="cursor">|</span>
+    </div>
 
-    <section id="about" class="panel">
-      <h2>Why this</h2>
-      <p>This tiny site is a heartfelt page made to celebrate you. It’s responsive, warm, and crafted to feel intimate on every screen.</p>
-    </section>
-
-    <section id="gallery" class="panel">
-      <h2>Little Moments</h2>
-      <div class="grid">
-        <div class="card">💌 A note</div>
-        <div class="card">🌹 A rose</div>
-        <div class="card">✨ Our memories</div>
-      </div>
-    </section>
+    <p class="home-cta">Head over to the cake page and join the fun.</p>
+    <a class="btn" href="birthday.html">Open Cake</a>
   </main>
 
-  <footer class="site-footer">
-    <p>Made with ❤️ — 2026</p>
-  </footer>
-
-  <script src="assets/script.js" defer></script>
+  <script src="assets/script.js"></script>
 </body>
 </html>
