Hero background: full-bleed 4-image grid behind existing hero content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
     <!-- HOME / HERO -->
     <section id="home" class="hero hero--full" data-section>
+
+      <!-- Full-bleed background grid inserted behind existing overlay and content -->
+      <div class="hero-bg-grid" aria-hidden="true">
+        <div class="grid-item" style="background-image: url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1600&q=80');"></div>
+        <div class="grid-item" style="background-image: url('https://images.unsplash.com/photo-1491557345352-5929e343eb89?auto=format&fit=crop&w=1600&q=80');"></div>
+        <div class="grid-item" style="background-image: url('https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?auto=format&fit=crop&w=1600&q=80');"></div>
+        <div class="grid-item" style="background-image: url('https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=1600&q=80');"></div>
+      </div>
+
       <div class="hero__overlay" aria-hidden="true"></div>
 
       <div class="hero__inner">
