--- a/index.html
+++ b/index.html
@@ -68,45 +68,45 @@
 
     <!-- BIRTHDAY -->
     <section id="birthday" class="panel birthday-panel" data-section>
-      <h2>Happy Birthday!</h2>
-      <p class="birthday-sub">Tap the cake, blow gently into the mic, or press Play to make a wish. Use Reset to relight.</p>
+      <h1 class="birthday-title" id="birthday-message" style="opacity: 0; transform: translateY(-50px); transition: all 1s ease-out; margin-bottom: 1rem;">Happy Birthday Love 🥰❤️</h1>
+      <p class="birthday-sub" id="birthday-subtitle" style="transition: opacity 0.5s ease-out;">Time to blow the candles...simply tap the cake 😊</p>
 
-      <div class="birthday-stage">
-        <div id="svg-cake-wrap" class="svg-cake-wrap" tabindex="0" role="button" aria-label="Birthday cake — click or blow to extinguish candles">
-          <!-- Inline SVG cake (clear cake visuals). Flames have class .flame -->
-          <svg id="cake-svg" width="420" height="300" viewBox="0 0 420 300" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Birthday cake">
-            <defs>
-              <filter id="f-drop" x="-50%" y="-50%" width="200%" height="200%">
-                <feDropShadow dx="0" dy="6" stdDeviation="10" flood-color="#e6a1b8" flood-opacity="0.12"/>
-              </filter>
-            </defs>
-
-            <ellipse cx="210" cy="280" rx="170" ry="18" fill="#fff5f9" />
-
-            <rect x="30" y="160" rx="22" ry="22" width="360" height="80" fill="#ffd1e6" filter="url(#f-drop)" />
-            <rect x="60" y="120" rx="18" ry="18" width="300" height="64" fill="#fff0f6" />
-            <rect x="90" y="88" rx="14" ry="14" width="240" height="44" fill="#fff7fb" />
-
-            <g id="sprinkles" fill="#ff9bb3" opacity="0.95">
-              <circle cx="140" cy="130" r="4" />
-              <circle cx="180" cy="110" r="3.5" fill="#ffd1e6" />
-              <circle cx="220" cy="125" r="3" fill="#ffb8d0" />
-              <circle cx="260" cy="105" r="4" fill="#ffc1d9" />
-            </g>
-
-            <g id="candles-group" transform="translate(0,70)">
-              <!-- 7 candles spaced across -->
-              <g transform="translate(30,0)"><rect x="0" y="0" width="12" height="36" rx="2" fill="#fff"/><rect x="-2" y="36" width="16" height="6" rx="3" fill="#ffeef2"/><g class="flame" transform="translate(6,-6)"><path d="M0 0 C3 -6, 9 -6, 12 0 C9 -2, 6 6, 0 0Z" fill="#ffd86b"/></g></g>
-              <g transform="translate(80,0)"><rect x="0" y="0" width="12" height="36" rx="2" fill="#fff"/><rect x="-2" y="36" width="16" height="6" rx="3" fill="#ffeef2"/><g class="flame" transform="translate(6,-6)"><path d="M0 0 C3 -6, 9 -6, 12 0 C9 -2, 6 6, 0 0Z" fill="#ffd86b"/></g></g>
-              <g transform="translate(130,0)"><rect x="0" y="0" width="12" height="36" rx="2" fill="#fff"/><rect x="-2" y="36" width="16" height="6" rx="3" fill="#ffeef2"/><g class="flame" transform="translate(6,-6)"><path d="M0 0 C3 -6, 9 -6, 12 0 C9 -2, 6 6, 0 0Z" fill="#ffd86b"/></g></g>
-              <g transform="translate(180,0)"><rect x="0" y="0" width="12" height="36" rx="2" fill="#fff"/><rect x="-2" y="36" width="16" height="6" rx="3" fill="#ffeef2"/><g class="flame" transform="translate(6,-6)"><path d="M0 0 C3 -6, 9 -6, 12 0 C9 -2, 6 6, 0 0Z" fill="#ffd86b"/></g></g>
-              <g transform="translate(230,0)"><rect x="0" y="0" width="12" height="36" rx="2" fill="#fff"/><rect x="-2" y="36" width="16" height="6" rx="3" fill="#ffeef2"/><g class="flame" transform="translate(6,-6)"><path d="M0 0 C3 -6, 9 -6, 12 0 C9 -2, 6 6, 0 0Z" fill="#ffd86b"/></g></g>
-              <g transform="translate(280,0)"><rect x="0" y="0" width="12" height="36" rx="2" fill="#fff"/><rect x="-2" y="36" width="16" height="6" rx="3" fill="#ffeef2"/><g class="flame" transform="translate(6,-6)"><path d="M0 0 C3 -6, 9 -6, 12 0 C9 -2, 6 6, 0 0Z" fill="#ffd86b"/></g></g>
-              <g transform="translate(330,0)"><rect x="0" y="0" width="12" height="36" rx="2" fill="#fff"/><rect x="-2" y="36" width="16" height="6" rx="3" fill="#ffeef2"/><g class="flame" transform="translate(6,-6)"><path d="M0 0 C3 -6, 9 -6, 12 0 C9 -2, 6 6, 0 0Z" fill="#ffd86b"/></g></g>
-            </g>
-
-          </svg>
-        </div>
+      <div class="birthday-stage" style="position: relative; display: inline-block;">
+        <img 
+          id="cake-image-index" 
+          src="assets/Candle1.JPG" 
+          alt="Birthday cake with candles" 
+          style="max-width: 100%; height: auto; cursor: pointer; border-radius: 12px; box-shadow: 0 8px 24px rgba(230, 161, 184, 0.3); max-height: 500px; object-fit: contain; display: block; background: linear-gradient(135deg, #fff5f9 0%, #ffeef6 100%);"
+        />
+        <!-- Animated flames overlay (only visible when candles are on) -->
+        <svg id="flame-overlay" width="100%" height="100%" viewBox="0 0 400 300" style="position: absolute; top: 0; left: 0; pointer-events: none;" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <style>
+              @keyframes flicker {
+                0%, 100% { opacity: 1; transform: scale(1) translateY(0); }
+                50% { opacity: 0.8; transform: scale(1.1) translateY(-2px); }
+              }
+              .animated-flame {
+                animation: flicker 0.3s ease-in-out infinite;
+              }
+              .animated-flame:nth-child(2) { animation-delay: 0.1s; }
+              .animated-flame:nth-child(3) { animation-delay: 0.2s; }
+              .animated-flame:nth-child(4) { animation-delay: 0.15s; }
+              .animated-flame:nth-child(5) { animation-delay: 0.25s; }
+              .animated-flame:nth-child(6) { animation-delay: 0.05s; }
+              .animated-flame:nth-child(7) { animation-delay: 0.3s; }
+            </style>
+          </defs>
+          <!-- Flames positioned over candles (adjust positions to match your image) -->
+          <g id="flames-group">
+            <path class="animated-flame" d="M80 80 C83 74, 89 74, 92 80 C89 78, 86 86, 80 80Z" fill="#ffd86b" opacity="0.9"/>
+            <path class="animated-flame" d="M130 80 C133 74, 139 74, 142 80 C139 78, 136 86, 130 80Z" fill="#ffd86b" opacity="0.9"/>
+            <path class="animated-flame" d="M180 80 C183 74, 189 74, 192 80 C189 78, 186 86, 180 80Z" fill="#ffd86b" opacity="0.9"/>
+            <path class="animated-flame" d="M230 80 C233 74, 239 74, 242 80 C239 78, 236 86, 230 80Z" fill="#ffd86b" opacity="0.9"/>
+            <path class="animated-flame" d="M280 80 C283 74, 289 74, 292 80 C289 78, 286 86, 280 80Z" fill="#ffd86b" opacity="0.9"/>
+            <path class="animated-flame" d="M330 70 C333 64, 339 64, 342 70 C339 68, 336 76, 330 70Z" fill="#ffd86b" opacity="0.9"/>
+          </g>
+        </svg>
       </div>
 
       <div class="birthday-controls">
@@ -115,6 +115,7 @@
       </div>
 
       <canvas id="confetti" class="confetti-canvas" aria-hidden="true"></canvas>
+      <audio id="birthday-song-index" preload="auto" src="assets/HBD.mp4"></audio>
     </section>
 
   </main>
