--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
         
         <div class="page-navigation">
           <button class="nav-button" data-page="birthday">
-            <span>Lets cut the cake </span>
-            <span>🎂</span>
+            <span>Are...aaj toh kuch special hai... </span>
           </button>
         </div>
       </div>
@@ -305,13 +304,18 @@
     <!-- BIRTHDAY PAGE -->
     <section id="birthday" class="page" data-page="birthday">
       <div class="birthday-container">
-        <div class="birthday-header">
+        <!-- <div class="birthday-header">
           <h1 class="birthday-main-title" id="birthday-message">
             Happy Birthday Love 🥰 ❤️
           </h1>
           <p class="birthday-instruction" id="birthday-subtitle">
-            Time to blow the candles...simply tap the cake 😊
+            Han byii...kisika bday hai kya?...cake pe tap karo 😊
           </p>
+        </div> -->
+        <div class="page-header" id="caked-wish">
+          <span class="page-subtitle">Han byii...kisika bday hai kya?...Chalo cake pe tap karo and...</span>
+          <h2 class="page-title">Candles blow karo...</h2>
+          <div class="title-underline"></div>
         </div>
         
         <div class="birthday-stage">
