Fixed all issues

--- a/birthday.html
+++ b/birthday.html
@@ -18,7 +18,7 @@
 
   <main id="content" class="container birthday-container">
     <section class="birthday-stage">
-      <h1 class="birthday-title" id="birthday-message" style="opacity: 0; transform: translateY(-50px); transition: all 1s ease-out;">Happy Birthday Love 🥰❤️</h1>
+      <h1 class="birthday-title" id="birthday-message" style="opacity: 0; transform: translateY(-50px); transition: all 1s ease-out;">Happy Birthday Love ❤️</h1>
       <p class="birthday-sub" id="birthday-subtitle" style="transition: opacity 0.5s ease-out;">Time to blow the candles...simply tap the cake 😊</p>
 
       <div class="birthday-scene">
